--- a/features.html
+++ b/features.html
@@ -63,5 +63,7 @@
   </div>
 
   <button class="explore-button" onclick="document.getElementById('features').scrollIntoView({behavior: 'smooth'})">Explore More</button>
+  <script src="https://cdn.botpress.cloud/webchat/v2.3/inject.js"></script>
+  <script src="https://files.bpcontent.cloud/2025/04/12/11/20250412113101-9KDHYXCQ.js"></script>
 </body>
 </html>
