--- a/login.html
+++ b/login.html
@@ -95,5 +95,7 @@
            return false;
          });
    </script>
+<script src="https://cdn.botpress.cloud/webchat/v2.3/inject.js"></script>
+<script src="https://files.bpcontent.cloud/2025/04/12/11/20250412113101-9KDHYXCQ.js"></script>
 </body>
 </html>
