--- a/pcos_prediction.html
+++ b/pcos_prediction.html
@@ -121,5 +121,7 @@
             return score >= 2 ? 1 : 0;
         }
     </script>
+    <script src="https://cdn.botpress.cloud/webchat/v2.3/inject.js"></script>
+    <script src="https://files.bpcontent.cloud/2025/04/12/11/20250412113101-9KDHYXCQ.js"></script>
 </body>
 </html> 
