--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="container">
                 <ul class="nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="features.html">Features</a></li>
+                        <li><a href="features.html">Facts</a></li>
                         <li><a href="about.html" id="aboutLink">About Us</a></li>
                         <li><a href="login.html" id="loginLink">Login</a></li>
                 </ul> 
@@ -24,11 +24,12 @@
   <p class="description">
     Your AI-powered personalized reproductive healthcare.
   </p>
-
-  <!--<div class="features-container" id="features">
+  <div class="features-container" id="features">
     <div class="feature-box">
-      <img src="https://img.icons8.com/color/96/medical-doctor.png" class="feature-icon" alt="PCOS Prediction">
-      <div class="feature-title">PCOS/PCOD Prediction</div>
+      <a href="pcos_prediction.html">
+        <img src="https://img.icons8.com/color/96/medical-doctor.png" class="feature-icon" alt="PCOS Prediction">
+        <div class="feature-title">PCOS/PCOD Prediction</div>
+      </a>
     </div>
     <div class="feature-box">
       <img src="https://img.icons8.com/color/96/salad.png" class="feature-icon" alt="Diet Plans">
@@ -59,7 +60,8 @@
       <div class="feature-title">Progress Reports</div>
     </div>
   </div>
-<button class="explore-button" onclick="document.getElementById('features').scrollIntoView({behavior: 'smooth'})">Explore More</button>-->
+
+  <button class="explore-button" onclick="document.getElementById('features').scrollIntoView({behavior: 'smooth'})">Explore More</button>
 <script src="https://cdn.botpress.cloud/webchat/v2.3/inject.js"></script>
 <script src="https://files.bpcontent.cloud/2025/04/12/11/20250412113101-9KDHYXCQ.js"></script>
 </body>
