--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>OviWell Features</title>
+  <title>OviWell</title>
   
 </head>
 <body>
@@ -13,40 +13,50 @@
             <div class="container">
                 <ul class="nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="features.html">Facts</a></li>
-                        <li><a href="about.html" id="aboutLink">About Us</a></li>
-                        <li><a href="login.html" id="loginLink">Login</a></li>
+                        <li><a href="facts.html">Facts</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="login.html">Login</a></li>
                 </ul> 
             </div>
         </nav>
     </header>
-  <h1>Welcome to OviWell</h1>
-  <p class="description">
-    Your AI-powered personalized reproductive healthcare.
-  </p>
-<p><b>Welcome to OviWell</b> – your personalized female healthcare platform. 
-    Provides companion in understanding, predicting, and managing 
-    Polycystic Ovarian Syndrome (PCOS), Polycystic Ovarian Disease 
-    and overall female health.<br>
-    We believe that knowledge is the first step to wellness mainly 
-    for teenagers. That’s why we’ve created a platform that not only 
-    helps assess your likelihood of having PCOS and PCOD but also aims 
-    to bust myths, raise awareness, and support every woman’s health journey.<br>
-🌸 <b>Our Mission</b><br>
-    To empower women with accurate, easy-to-understand tools and resources 
-    for better reproductive and hormonal health. We are committed to 
-    breaking the silence around PCOS, PCOD fighting stigma, and ensuring 
-    no woman feels alone in her journey.<br>
-🔍 <b>What We Offer</b><br>
-    A PCOS/PCOD Prediction Tool to help you understand your symptoms and risk factors.<br>
-    A myth-busting section to tackle misinformation and provide medically backed facts.<br>
-    Ongoing educational content focused on lifestyle, nutrition, mental well-being, 
-    and female reproductive health.<br>
-
-
-💖 <b>Why OviWell?</b><br>
-    Because every woman deserves to be heard, informed, and supported. 
-    Whether you’re here for a quick check, learning more about PCOS, 
-    or seeking guidance—OviWell is designed with you in mind.<br>
-    Together, let’s build a future where female health is talked about 
-    freely, and wellness becomes a shared journey.</p>
+ 
+    <section id="about">
+        <div class="container">
+            <div class="about-listing">
+                <div class="about-card">
+                    <h3><b>Welcome to OviWell</b></h3>
+                    <p>– your personalized female healthcare platform. 
+                    Provides companion in understanding, predicting, and managing 
+                    Polycystic Ovarian Syndrome (PCOS), Polycystic Ovarian Disease 
+                    and overall female health.</p><br>
+                    <p>We believe that knowledge is the first step to wellness mainly 
+                    for teenagers. That’s why we’ve created a platform that not only 
+                    helps assess your likelihood of having PCOS and PCOD but also aims 
+                    to bust myths, raise awareness, and support every woman’s health journey.</p>
+                </div>
+                <div class="about-card">
+                    <h3><b>🌸Our Mission</b></h3><br>
+                    <p>To empower women with accurate, easy-to-understand tools and resources 
+                    for better reproductive and hormonal health. We are committed to 
+                    breaking the silence around PCOS, PCOD fighting stigma, and ensuring 
+                    no woman feels alone in her journey.</p>
+                </div>
+                <div class="about-card">
+                    <h3><b>🔍What We Offer</b></h3><br>
+                    <p>A PCOS/PCOD Prediction Tool to help you understand your symptoms and risk factors.<br>
+                    A myth-busting section to tackle misinformation and provide medically backed facts.<br>
+                    Ongoing educational content focused on lifestyle, nutrition, mental well-being, 
+                    and female reproductive health.</p><br> 
+                </div>
+                <div class="about-card">
+                    <h3><b>💖Why OviWell?</b></h3><br>
+                    <p>Because every woman deserves to be heard, informed, and supported. 
+                    Whether you’re here for a quick check, learning more about PCOS, 
+                    or seeking guidance—OviWell is designed with you in mind.<br>
+                    Together, let’s build a future where female health is talked about 
+                    freely, and wellness becomes a shared journey.</p>
+                </div>
+            </div>
+        </div>
+    </section>
