--- a/pcos_prediction.html
+++ b/pcos_prediction.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>PCOS Prediction - OviWell</title>
+  <title>OviWell</title>
 </head>
 <body>
     <header>
@@ -12,16 +12,16 @@
             <div class="container">
                 <ul class="nav">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="features.html">Features</a></li>
-                    <li><a href="about.html" id="aboutLink">About Us</a></li>
-                    <li><a href="login.html" id="loginLink">Login</a></li>
+                    <li><a href="facts.html">Facts</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="login.html">Login</a></li>
                 </ul> 
             </div>
         </nav>
     </header>
 
     <div class="container">
-        <h1 style="color: #d42d72; font-size: 36px; font-weight: bold;">PCOS Prediction Tool<br></h1>
+        <h1 style="color: #d42d72; font-size: 36px; font-weight: bold;">PCOS Prediction Tool<br><br></h1>
         <p style="font-size: 18px; color: #c2185b;">
         This tool helps assess your likelihood of having Polycystic Ovarian Syndrome (PCOS).
         Please answer the following questions to get your prediction.
