--- a/about.html
+++ b/about.html
@@ -11,6 +11,11 @@
     <header>
         <nav>
             <div class="container">
+                <div class="logo-container">
+                  <img src="img/logo.jpg" alt="OviWell Logo" class="logo">
+                  <span class="brand-name">OviWell</span>
+                </div>
+            <div class="container">
                 <ul class="nav">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="facts.html">Facts</a></li>
@@ -25,7 +30,7 @@
         <div class="container">
             <div class="about-listing">
                 <div class="about-card">
-                    <h3><b>Welcome to OviWell</b></h3>
+                    <h3><b>❓What is Oviwell?</b></h3>
                     <p>– your personalized female healthcare platform. 
                     Provides companion in understanding, predicting, and managing 
                     Polycystic Ovarian Syndrome (PCOS), Polycystic Ovarian Disease 
