--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <div class="container">
               <div class="logo-container">
-                <img src="logo.jpg" alt="OviWell Logo" class="logo">
+                <img src="img/logo.jpg" alt="OviWell Logo" class="logo">
                 <span class="brand-name">OviWell</span>
               </div>
                 <ul class="nav">
