--- a/login.html
+++ b/login.html
@@ -10,6 +10,11 @@
 <body>
     <header>
         <nav>
+          <div class="container">
+            <div class="logo-container">
+              <img src="img/logo.jpg" alt="OviWell Logo" class="logo">
+              <span class="brand-name">OviWell</span>
+            </div>
             <div class="container">
                 <ul class="nav">
                         <li><a href="index.html">Home</a></li>
