--- a/dashboard.html
+++ b/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Dashboard</title>
+  <title>OviWell</title>
 </head>
 <body>
   <h2>Welcome to your dashboard!</h2>
